<resources xmlns:tools="http://schemas.android.com/tools">
    <!--    Page Titles     -->
    <string name="app_name">Study Now</string>
    <string name="title_activity_info_page">Information</string>
    <string name="title_activity_events_page">Events</string>
    <string name="title_activity_calendar_date">Events on Date</string>
    <string name="title_activity_adding_modules">Add Module</string>

    <!--    Universal Strings   -->
    <string name="title_activity_colors_page">Colors</string>
    <string name="title_activity_input_page">Add Event</string>
    <string name="title_activity_settings_page">Settings</string>
    <string name="title_activity_edit_page">Edit Event</string>
    <string name="delete">Delete</string>
    <string name="description">Description</string>
    <string name="event_edit">Edit Event</string>
    <string name="event_settings">Event Settings</string>

    <!--    Page elements   -->
    <string name="change_colour">Change Colour</string>
    <string name="events_custom">Custom Events</string>
    <string name="daily_custom">Daily Events</string>
    <string name="weekly_custom">Weekly Events</string>
    <string name="monthly_custom">Monthly Events</string>
    <string name="yearly_custom">Yearly Events</string>
    <string name="events_for">Events for %1$d/%2$d/%3$d</string><!--%1$d/%2$d/%3$d represents the british english date format. 1 = day, 2 = month, 3 = year. They can be swapped around if the date formal is different in another language-->
    <string name="title_input">Title</string>
    <string name="all_day_event_switch">All Day Event</string>
    <string name="location_input">Location</string>
    <string name="description_input">Description</string>
    <string name="pick_start">PICK START DATE AND TIME</string>
    <string name="pick_end">PICK END DATE AND TIME</string>
    <string name="start_date">Start Date:</string>
    <string name="start_time">Start Time:</string>
    <string name="end_date">End Date:</string>
    <string name="end_time">End Time:</string>
    <string name="info">Study Now is a simple calendar application developed to facilitate student schedule management; making it easier to plan events, times to study, possible breaks and more.</string>
    <string name="application_version">Application Version: 2.0.3</string>
    <string name="participants">Created by: Segmentation Fault\n\nMembers:\nDaniel\nJames\nChris\nRoyston\nRyan</string>
    <string name="type_custom">Custom</string>
    <string name="type_daily">Daily</string>
    <string name="type_weekly">Weekly</string>
    <string name="type_monthly">Monthly</string>
    <string name="type_yearly">Yearly</string>
    <string name="type_allday">All Day</string>
    <string name="event_type">Event Type</string>
    <string name="day_sunday">Sunday</string>
    <string name="day_monday">Monday</string>
    <string name="day_tuesday">Tuesday</string>
    <string name="day_wednesday">Wednesday</string>
    <string name="day_thursday">Thursday</string>
    <string name="day_friday">Friday</string>
    <string name="day_saturday">Saturday</string>
    <string name="formatted_character">0</string> <!--08/03/2020 as opposed to 8/3/2020. leave blank if this kind of formatting isn't necessary in the other language-->
    <string name="full_date">%1$s/%2$s/%3$d</string> <!--the order in which the date is written. 1 = day, 2 = month 3 = year. the / represents the / between the dates in the formal itself. e.g. 08/03/2020-->
    <string name="month_date">%1$d%2$s</string><!--day of month and its ending. e.g. 3rd or 2nd. remove the %2$s if there is no unique ending like there is in english-->
    <string name="short_date">%1$s/%2$s</string><!--same as full_date but without year. 1 = day, 2 = month-->
    <string name="time">%1$s:%2$s</string><!--time of day. 1 = hour, 2 = minutes-->
    <string name="language">Language:</string>
    <string name="no_events">No Events</string>
    <string name="event_added">Event Added</string>
    <string name="event_edited">Event Edited</string>
    <string name="input_needed">Input Needed</string>
    <string name="reset">Reset</string>
    <string name="resetConfirmation">Are you sure that you would like to reset the application? You will lose all information stored on the app and the application will revert to default.</string>
    <string name="cancel">Cancel</string>
    <string name="OK">Confirm</string>
    <string name="enter_course_module">Enter Module Name</string>
    <string name="enter_number_of_recommended_hours_for_revision">Enter no of recommended hours for revision</string>
    <string name="lecture">Lecture</string>
    <string name="lecture_running_this_module">Lecturer running this module</string>
    <string name="class_classSwitch">Class</string>
    <string name="name_of_lecture_running_class">Name of lecture running class</string>
    <string name="add_modules">Add modules</string>
    <string name="app_color" >Colors</string>
    <string name="pink">Pink</string>
    <string name="blue">Blue</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="yellow">Yellow</string>
    <string name="orange">Orange</string>


    <string-array name="Repeat">
        <item>Do Not Repeat</item>
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Yearly</item>
    </string-array>

    <string-array name="lang">
        <item>English</item>
        <item>日本語</item>
        <item>繁體中文</item>
        <item>简体中文</item>
        <item>русский</item>
        <item>Français</item>
        <item>Български</item>
        <item>Türk</item>
        <item>Espanol</item>
        <item>Português</item>
        <item>Deutsch</item>
        <item>Norsk</item>
    </string-array>

</resources>
