<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".editPage">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/Toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/AppTheme"
            app:titleTextColor="#000000"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editeventTitleInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:hint="@string/title_input"
                android:inputType="textUri|textPersonName"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                android:backgroundTint="#000000"
                android:textColor="#000000"
                android:textColorHint="#000000"
                android:textSize="14sp"
                android:textStyle="italic" />

            <Switch
                android:id="@+id/editdayEventSwitch"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right|end"
                android:checked="false"
                android:padding="@dimen/cardview_default_radius"
                android:text="@string/all_day_event_switch"
                android:textColor="#000000"
                android:textColorHighlight="@color/colorAccent"
                android:textSize="14dp" />


            <Spinner
                android:id="@+id/editroutine"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:theme="@style/AppTheme"
                android:gravity="center"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/editeventLocationInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:backgroundTint="#000000"
                android:ems="10"
                android:hint="@string/location_input"
                android:inputType="textPersonName"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="#000000"
                android:textColorHint="#000000"
                android:textStyle="italic" />

            <MultiAutoCompleteTextView
                android:id="@+id/editeventDescInput"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:backgroundTint="#000000"
                android:ems="10"
                android:hint="@string/description_input"
                android:inputType="textMultiLine"
                android:singleLine="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="#000000"
                android:textColorHint="#000000"
                android:textStyle="italic" />

            <Button
                android:id="@+id/editpickDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/custom_buttons"
                android:text="@string/pick_start"
                android:textColor="#FEFEFE" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="0dp">

                <TextView
                    android:id="@+id/editdateTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="50"
                    android:background="#00FFFFFF"
                    android:fontFamily="sans-serif-thin"
                    android:gravity="center"
                    android:text="@string/start_date"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/edittimeTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="50"
                    android:background="#00FFFFFF"
                    android:fontFamily="sans-serif-thin"
                    android:gravity="center_horizontal"
                    android:text="@string/start_time"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <Button
                android:id="@+id/editpickEndDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/custom_buttons"
                android:text="@string/pick_end"
                android:textColor="#FEFEFE" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/editdateTVend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="50"
                    android:background="#00FFFFFF"
                    android:fontFamily="sans-serif-thin"
                    android:gravity="center"
                    android:text="@string/end_date"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/edittimeTVend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="50"
                    android:background="#00FFFFFF"
                    android:fontFamily="sans-serif-thin"
                    android:gravity="center_horizontal"
                    android:text="@string/end_time"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <Button
                android:id="@+id/editEventButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/custom_buttons"
                android:text="@string/event_edit"
                android:textColor="#FEFEFE" />

        </LinearLayout>

    </android.support.design.widget.AppBarLayout>
</android.support.design.widget.CoordinatorLayout>